# simple-filehost

./: Cargo.toml  README.md  flake.nix
src/: main.rs  post.rs
