[package]
name = "simple-filehost"
version = "0.1.0"
authors = ["Amneesh Singh <natto@weirdnatto.in>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-multipart = "0.3"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
